Fixed overflow

--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
+html {
+    overflow: hidden;
+}
+
 body {
     background-color: #121213;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
 }
 
 div {
